--- a/report.Rmd
+++ b/report.Rmd
@@ -32,7 +32,8 @@ knitr::opts_chunk$set(echo = FALSE) # no markdown for you <3
 
 Load the data using `load_n_trim()` and store into a variable.
 ```{r Load data}
-
+counts <- load_n_trim('data/verse_counts.tsv')
+head(counts)
 ```
 
 ## Run three packages
@@ -41,41 +42,85 @@ In the following three sections, use your functions to complete the three differ
 ### DESeq2
 We include the output of `run_deseq()` as well as the contents of the `coldata` input. The `colData` parameter for DESeq2 describes the experimental setup and which samples belong to which part of the experiment. We will be using the recommended count filter of 10 (from the DESeq2 documentation). A sample of the DESeq2 output is included, but note that the order of your genes and the values in the columns may differ slightly, please ensure the data is the right shape and has columns labeled correctly. A warning from DESeq2 is normal. Store DESeq2 results into a variable.
 ```{r DESeq2}
-
+cat("coldata:\n")
+colData <- data.frame(condition = rep(c("day0", "adult"), each=2))
+row.names(colData) <- c("vP0_1", "vP0_2", "vAd_1","vAd_2")
+colData
+deseq_res <- run_deseq(counts, colData, 10, "condition_day0_vs_adult")
+cat("deseq results:\n")
+head(deseq_res)
 ```
 
 ### EdgeR
 EdgeR's method of describing an experiment is more simple than DESeq2. The default results for EdgeR **do not** include p-adjusted values, but we can add them ourselves. Once we have the results stored, we can add a new column by using the `stats::p.adjust()` function with `method = 'BH'`.
 ```{r edgeR}
-
+cat("group:\n")
+group <- factor(rep(c(1,2), each=2))
+group
+edger_res <- run_edger(counts, group)
+cat("edger without padj:\n")
+head(edger_res, 3)
+cat("edger _with_ padj:\n")
+edger_res$padj <- p.adjust(edger_res$PValue, method="BH")
+head(edger_res, 3)
 ```
 
 ### Limma with voom
 Finally, we create an experimental design variable for Limma. We _will_ be using voom in this analysis, so set your voom argument to `TRUE`. If your limma/voom functions include a plot, that's fine! Bonus plots are always fun for cramming into your supplemental materials.
 ```{r Limma}
-
+cat("design:\n")
+design <- data.frame(day0=1, day0vsadult=c(0, 0, 1, 1))
+row.names(design) <- c("vP0_1", "vP0_2", "vAd_1", "vAd_2")
+design
+cat("group:\n")
+group <- factor(rep(c(1,2), each=2))
+group
+limma_res <- run_limma(counts, design, group)
+cat("Limma results:\n")
+head(limma_res)
 ```
 
 ## Plots
 We don't want to worry our little heads plotting _all_ of the data, so we will just trim it down to the 1,000 most significant p-values. Order each of the three results set by **p-value** and take the top (smallest) 1,000 rows. Note that we are _plotting_ the **p-adjusted** values but we are _sorting_ the **p-values**. This is an important distinction.
 ```{r Trim data}
-
+cat("Limma shape before:\n")
+str(limma_res)
+o <- order(deseq_res$pvalue)
+deseq <- head(deseq_res[o,], 1000)
+o <- order(edger_res$PValue)
+edger <- head(edger_res[o,], 1000)
+o <- order(limma_res$P.Value)
+limma <- head(limma_res[o,], 1000)
+cat("Limma shape after:\n")
+str(limma)
 ```
 
 We want to create a venn diagram using the `ggVennDiagram` package. This package asks for a list object as input, so we can create a list that contains the three named collections of genes from our separate packages. Calling row.names() will give us the names of all the genes.
 More info here: [ggVennDiagram](https://r-charts.com/part-whole/ggvenndiagram/)
 ```{r Venn diagram, fig.align='center', fig.cap="Figure 1 - A venn diagram comparing the top 1,000 differentially expressed genes from three different R packages ordered by ascending p-value. A Lighter shade of blue indicates a higher proportion of shared genes."}
-
+x <- list(EdgeR = row.names(edger), DESeq2 = row.names(deseq), Limma = row.names(limma))
+ggVennDiagram(x, color = "black") + 
+  scale_fill_gradient(low = "#000051", high = "#4fc3f7") +
+  ggtitle("Top 1000 genes from three diff. exp. R packages") +
+  theme(plot.title = element_text(hjust = 0.5))
 ```
 
 While plots can be used to create publication ready images, we can also utilize them to check our data and confirm our assumptions. Limma seems to have a number of selected genes that don't match DESeq2 and edgeR, so we're interested to see how the distributions of p-values compare to one another. We did not write this plot as a function, but can use the data we generate with `combine_pval()` to `facet_wrap()` the three data sets together. Use facet wrap with the `~ package` parameter to recreate the figure below. 
 ```{r Facet plot, fig.align='center', fig.cap='Figure 2 - Three histogram plots comparing the distribution of p-values for three differential expression packages. Note that edgeR and DESeq2 have their values concentrated closer to 0 than the Limma package results.'}
-
+combined_vals <- combine_pval(deseq, edger, limma)
+as.data.frame(combined_vals) %>%
+ggplot(aes(pval)) + 
+    geom_histogram(bins=50, color='black', fill='#00363a') + 
+    ggtitle('Distributions of p-values for 1,000 genes: day0 vs adult') +
+  facet_wrap(~package, nrow = 3) +
+  theme(panel.background = element_rect(fill='white'), panel.border = element_rect(colour = "black", fill=NA, size=1))
 ```
 
 Use `create_facets()` and `theme_plot()` to create the final plot.
 ```{r Final plot, fig.align='center', fig.cap='Figure 3 - A volcano plot of the top 1,000 genes (ranked by p-value) comparing the log<sub>2</sub> fold-change with the adjusted p-value. Adjusted p-values above 1e-100 are highlighted in red.'}
-
+volcano_data <- create_facets(deseq, edger, limma)
+plot <- theme_plot(volcano_data)
+plot
 ```
 
 
@@ -87,6 +132,40 @@ robust approach to differential exis to use limma-trend.
 Is this appropriate for our data? How can you tell? If you're interested, design a function to run limma-trend _instead_ of voom, and compare using the plots above. What does using voom do to the data? Again, this is a bonus section and <span style="color:red">**is not**</span> necessary to complete assignment 6. Feel free to create the venn diagram, or other plots used in this assignment.  
 ```{r Voomless bonus, fig.align='center', fig.cap="Figure 4+ - A venn diagram comparing the top 1,000 differentially expressed genes from four different R packages ordered by ascending p-value."}
 voomless <- function(count_dataframe, design, group) {
+  dge <- DGEList(counts = count_dataframe)
+  keep <- filterByExpr(dge, design)
+  dge <- dge[keep,,keep.lib.sizes=FALSE]
+  dge <- calcNormFactors(dge)
+  logCPM <- cpm(dge, log=TRUE, prior.count=3)
+  dim(logCPM)
+  fit <- lmFit(logCPM, design)
+  fit <- eBayes(fit, trend=TRUE)
+  dim(fit)
+  res <- topTable(fit, coef=ncol(design), number=Inf, resort.by="P")
+  dim(res)
+  return(res)
+}
+design <- data.frame(day0=1, day0vsadult=c(0, 0, 1, 1))
+row.names(design) <- c("vP0_1", "vP0_2", "vAd_1", "vAd_2")
+group <- factor(rep(c(1,2), each=2))
+limma_trend_res <- voomless(counts, design, group)
+o <- order(limma_trend_res$P.Value)
+limma_trend <- head(limma_trend_res[o,], 1000)
+x <- list(EdgeR = row.names(edger), DESeq2 = row.names(deseq), Voom = row.names(limma), Limma = row.names(limma_trend))
+ggVennDiagram(x, color = "black") +
+  scale_fill_gradient(low = "#000051", high = "#4fc3f7") +
+  ggtitle('Top 1000 genes from FOUR diff. exp. R packages')
 
+combined_vals <- combine_pval2(deseq, edger, limma, limma_trend)
+as.data.frame(combined_vals) %>%
+ggplot(aes(pval)) + 
+    geom_histogram(bins=50, color='black', fill='#00363a') + 
+    ggtitle('Distributions of p-values for 1,000 genes: day0 vs adult') +
+  facet_wrap(~package, nrow = 4) +
+  theme(panel.background = element_rect(fill='white'), panel.border = element_rect(colour = "black", fill=NA, size=1))
+
+volcano_data <- create_facets2(deseq, edger, limma, limma_trend)
+plot <- theme_plot2(volcano_data)
+plot
 ```
 
